[package]
name = "rundown"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
thiserror = "1.0.26"
markdown = { git = "https://github.com/mjkoo/markdown.rs", branch = "ordered-list-generation" }
structopt = "0.3.22"
